--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ header {
     width:400px;
     max-height: 208px;
     height: 100%;
-    border: 1px solid #001219;
+    border: 1px solid white;
     background-color: #0E0E0E;
     color: #FFFFFF;
     background-image: url("images/movie_background_2.jpeg");
