--- a/index.css
+++ b/index.css
@@ -13,7 +13,8 @@ header {
     width:400px;
     max-height: 208px;
     height: 100%;
-    background-color: #0E0E0E;
+    /* background-color: #0E0E0E; */
+    background-color: red;
     color: #FFFFFF;
     background-image: url("images/movie_background_2.jpeg");
     background-size:80%;
@@ -42,8 +43,9 @@ input {
     width: 260px;
     background-color: #2E2E2F;;
     border: none;
-    padding: 10px;
+    /* padding: 10px; */
     text-align: center;
+    border: 1px solid red;
 }
 
 button {
@@ -52,7 +54,8 @@ button {
     border: none;
     border-radius: 0.375em;
     color: #FFFFFF;
-    padding: 0.25em 1em;
+    /* padding: 0.25em 1em; */
+    border: 1px solid white;
 }
 
 .search-container{
@@ -66,6 +69,7 @@ button {
     border-radius: 0.375em;
     background-color: #2E2E2F;
     padding: 0.125em;
+    border: 1px solid yellow;
 }
 
 i {
@@ -91,4 +95,8 @@ i {
     height: 62px;
     margin-top: 211px;
     
+}
+
+form {
+    margin: 0;
 }
