--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@ body {
   }
 header {
     max-width: 550px;
-    width:400px;
+    width:100%;
     max-height: 208px;
     height: 100%;
     /* background-color: #0E0E0E; */
-    background-color: red;
+    /* background-color: red; */
     color: #FFFFFF;
     background-image: url("images/movie_background_2.jpeg");
     background-size:80%;
@@ -83,7 +83,7 @@ i {
 .list {
     height: 572px; 
     max-width: 550px;
-    width:400px;
+    width:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
