--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
   }
 header {
     max-width: 550px;
-    width:100%;
+    width:80%;
     max-height: 208px;
     height: 100%;
     /* background-color: #0E0E0E; */
@@ -40,7 +40,9 @@ span {
 
 
 input {
-    width: 260px;
+    display: flex;
+    max-width: 260px;
+    width: 80%;
     background-color: #2E2E2F;;
     border: none;
     /* padding: 10px; */
@@ -49,7 +51,9 @@ input {
 }
 
 button {
-    width: 120px;
+    display: flex;
+    max-width: 120px;
+    /* width: 80%; */
     background-color: #4B4B4B;
     border: none;
     border-radius: 0.375em;
@@ -83,7 +87,7 @@ i {
 .list {
     height: 572px; 
     max-width: 550px;
-    width:100%;
+    width:80%;
     display: flex;
     flex-direction: column;
     align-items: center;
