--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ header {
     max-height: 208px;
     height: 100%;
     /* background-color: #0E0E0E; */
-    /* background-color: red; */
+    background-color: red;
     color: #FFFFFF;
     background-image: url("images/movie_background_2.jpeg");
     background-size:80%;
