--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ button {
     border: none;
     border-radius: 0.375em;
     color: #FFFFFF;
-    padding: 0.25em 0.5rem;
+    padding: 0.25rem 0.5rem;
     font-size: 0.75rem;
 }
 
