--- a/index.css
+++ b/index.css
@@ -2,22 +2,24 @@ html,
 body {
     font-family: 'Inter', sans-serif;
     padding: 0;
-    background-color:#121212;
+    background-color: #121212;
     margin: 0;
 }
+
 * {
     box-sizing: border-box;
-  }
+}
+
 header {
     max-width: 550px;
-    width:100%;
+    width: 100%;
     max-height: 208px;
     height: 100%;
     /* background-color: #0E0E0E; */
     /* background-color: red; */
     color: #FFFFFF;
     background-image: url("images/movie_background_2.jpeg");
-    background-size:80%;
+    background-size: 80%;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
@@ -33,9 +35,8 @@ p {
     margin-left: 42px;
 }
 
-span {
+.genre span {
     font-size: 0.75em;
-    margin-right: 48px;
 }
 
 
@@ -43,11 +44,10 @@ input {
     display: flex;
     max-width: 260px;
     width: 80%;
-    background-color: #2E2E2F;;
+    background-color: #2E2E2F;
+    ;
     border: none;
-    /* padding: 10px; */
-    text-align: center;
-    /* border: 1px solid red; */
+    text-align: left;
 }
 
 button {
@@ -61,7 +61,7 @@ button {
     font-size: 0.75rem;
 }
 
-.search-container{
+.search-container {
     display: flex;
     max-width: 462px;
     width: 87%;
@@ -76,17 +76,14 @@ button {
 }
 
 i {
-    position: relative;
     color: white;
     padding: 0.5rem;
-    min-width: 40px;
-    top: 0;
 }
 
 .list {
-    height: 572px; 
+    /* height: 572px; */
     max-width: 550px;
-    width:100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -97,7 +94,7 @@ i {
     width: 70px;
     height: 62px;
     /* margin-top: 211px; */
-    
+
 }
 
 form {
@@ -108,16 +105,94 @@ form {
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 211px;
 }
 
-.movie-list p {
+/* .movie-list p {
     margin: 0;
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
-     color: #2E2E2F;
+    color: #2E2E2F;
+} */
+
+.movie-card {
+    display: flex;
+    /* background-color: white; */
+    border-bottom: 1.5px solid #2C2C2C;
+    padding: 2em 0;
+  
+    
+}
+
+.poster {
+    width: 100px;
+    /* height: 147px; */
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.title {
+    display: flex;
+    /* border: 1px solid red; */
+}
+
+.genre {
+    display: flex;
+    width: 300px;
+    /* border: 1px solid yellow; */
+    justify-content: space-between;
+    align-items: center;
+}
+
+.plot {
+    width: 300px;
+    height: 60px;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    /* color: #A5A5A5; */
+    color: #A5A5A5;
+
+    margin: 0;
+}
+
+.plot-content {
+    display: flex;
+}
+
+.movie-title {
+    font-size: 1.125rem;
+    font-weight: 500;
+    color: #FFFFFF;
+    margin: 0 4px 0 0;
+}
+
+.mt {
+    margin-top: 211px;
+}
+
+.checked {
+    color: #FEC654;
+    margin: auto 4px auto 0;
+}
+
+.rating {
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 1.5;
+    color: #FFFFFF;
+    font-style: normal;
+    margin: auto 4px auto 0;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    background-color: white;
 }
