--- a/index.css
+++ b/index.css
@@ -84,6 +84,8 @@ i {
     /* height: 572px; */
     max-width: 550px;
     width: 100%;
+    max-height: 779px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,6 +109,19 @@ form {
     flex-direction: column;
 }
 
+.error-div p {
+
+    /* width: 321px;
+    height: 40px;  */
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.125rem;
+    text-align: center; 
+    color: #787878;
+    
+}
+
 /* .movie-list p {
     margin: 0;
     font-size: 1.125rem;
@@ -121,8 +136,8 @@ form {
     /* background-color: white; */
     border-bottom: 1.5px solid #2C2C2C;
     padding: 2em 0;
-  
-    
+
+
 }
 
 .poster {
