--- a/index.css
+++ b/index.css
@@ -10,29 +10,45 @@ body {
     box-sizing: border-box;
 }
 
-header {
+.header-div {
+    display: flex;
+    /* flex-direction: column; */
+    background-image: url("images/movie_background_2.jpeg");
+    background-size: 80%;
+    background-repeat: no-repeat;
     max-width: 550px;
     width: 100%;
     max-height: 208px;
     height: 100%;
-    /* background-color: #0E0E0E; */
-    /* background-color: red; */
     color: #FFFFFF;
-    background-image: url("images/movie_background_2.jpeg");
-    background-size: 80%;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid white; */
 }
-
-p {
-    font-size: 1em;
+header {
+    width: 100%;
+}
+header p {
+    display: inline;
+    font-size: 1.5rem;
+    line-height: 1rem;
+    /* font-size: 42.7947px;
+    line-height: 24px; */
     font-weight: 800;
     font-style: normal;
     color: #FFFFFF;
-    line-height: 1.5;
-    margin-left: 42px;
+    margin-left: 1em;
+}
+
+header a {
+    position: absolute;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1rem;
+    text-align: right;
+    color: #FFFFFF;
+    margin-left: 5.5em;
 }
 
 .genre span {
@@ -80,16 +96,13 @@ i {
     padding: 0.5rem;
 }
 
-.list {
-    /* height: 572px; */
-    max-width: 550px;
-    width: 100%;
-    max-height: 779px;
-    height: 100vh;
+.container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: #4B4B4B;
+    max-width: 550px;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
 }
 
 .filler-img {
@@ -104,9 +117,11 @@ form {
 }
 
 .movie-list {
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
+    align-items: center;
+    /* border: 1px solid white; */
+    /* justify-self:  */
 }
 
 .error-div p {
@@ -122,14 +137,14 @@ form {
     
 }
 
-/* .movie-list p {
+.movie-list p {
     margin: 0;
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
-    color: #2E2E2F;
-} */
+    color: #787878;
+}
 
 .movie-card {
     display: flex;
