--- a/index.css
+++ b/index.css
@@ -100,9 +100,11 @@ i {
     display: flex;
     flex-direction: column;
     max-width: 550px;
-    width: 100%;
+    max-height: 779px;
+    width: 100vw;
     height: 100vh;
     margin: 0 auto;
+    border: 1px solid white;
 }
 
 .filler-img {
