--- a/index.css
+++ b/index.css
@@ -104,7 +104,8 @@ i {
     width: 100vw;
     height: 100vh;
     margin: 0 auto;
-    border: 1px solid white;
+    border: 1px solid yellow;
+    padding: 1em 0;
 }
 
 .filler-img {
