--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
     color: #FFFFFF;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid white; */
+    border: 1px solid red;
 }
 header {
     width: 100%;
@@ -102,10 +102,10 @@ i {
     max-width: 550px;
     max-height: 779px;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     margin: 0 auto;
     border: 1px solid yellow;
-    padding: 2em 0;
+    /* padding: 2em 0; */
 }
 
 .filler-img {
