--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html,
 body {
     font-family: 'Inter', sans-serif;
-    padding: 1em 0;
+    padding: 0;
     background-color: #121212;
     margin: 0;
 }
@@ -102,7 +102,7 @@ i {
     max-width: 550px;
     max-height: 779px;
     width: 100vw;
-    height: 100vh;
+    height: 98vh;
     margin: 0 auto;
     border: 1px solid yellow;
     /* padding: 1em 0; */
