--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
     color: #FFFFFF;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 header {
     width: 100%;
@@ -104,7 +104,7 @@ i {
     width: 100vw;
     height: 92vh;
     margin: 0 auto;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     /* padding: 1em 0; */
 }
 
@@ -123,6 +123,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 20vh 0;
     /* border: 1px solid white; */
     /* justify-self:  */
 }
