--- a/index.css
+++ b/index.css
@@ -14,20 +14,22 @@ body {
     display: flex;
     /* flex-direction: column; */
     background-image: url("images/movie_background_2.jpeg");
-    background-size: 80%;
-    background-repeat: no-repeat;
+    background-size: 100%;
+    /* background-repeat: no-repeat; */
     max-width: 550px;
     width: 100%;
     max-height: 208px;
-    height: 100%;
+    height: 100vh;
     color: #FFFFFF;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
+
 header {
     width: 100%;
 }
+
 header p {
     display: inline;
     font-size: 1.5rem;
@@ -63,9 +65,9 @@ input {
     max-width: 260px;
     width: 80%;
     background-color: #2E2E2F;
-    ;
     border: none;
     text-align: left;
+    color:white;
 }
 
 button {
@@ -80,10 +82,13 @@ button {
 }
 
 .search-container {
+    /* position: absolute; */
     display: flex;
     max-width: 462px;
     width: 87%;
     height: 38px;
+    /* top: 27vh;
+    left: 6vw; */
     margin-left: auto;
     margin-right: auto;
     margin-top: -20px;
@@ -143,19 +148,19 @@ form {
     font-style: normal;
     font-weight: 700;
     font-size: 1.125rem;
-    text-align: center; 
+    text-align: center;
     color: #787878;
-    
+
 }
 
-.movie-list p {
+/* .movie-list p {
     margin: 0;
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
     color: #787878;
-}
+} */
 
 .movie-card {
     display: flex;
@@ -164,13 +169,14 @@ form {
     padding: 2em 0;
     max-width: 462px;
     width: 87%;
-    border:1px solid white;
-    margin-top: 2.625em;
+    /* border:1px solid white; */
+    margin: 2.625em 0;
 }
 
 .poster {
     width: 100px;
-    border: 1px solid red;;
+    border: 1px solid red;
+    ;
     /* height: 147px; */
 }
 
@@ -189,7 +195,7 @@ form {
 .genre {
     display: flex;
     width: 300px;
-    /* border: 1px solid yellow; */
+    color: #FFFFFF;
     justify-content: space-between;
     align-items: center;
 }
@@ -213,8 +219,8 @@ form {
 .movie-title {
     font-size: 1.125rem;
     font-weight: 500;
-    color: #FFFFFF;
     margin: 0 4px 0 0;
+    color: #FFFFFF;
 }
 
 .mt {
