--- a/index.css
+++ b/index.css
@@ -13,17 +13,17 @@ body {
 .header-div {
     display: flex;
     /* flex-direction: column; */
-    background-image: url("images/movie_background_2.jpeg");
-    background-size: 100%;
-    /* background-repeat: no-repeat; */
+    background-image: url("images/theatre-2.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
     max-width: 550px;
     width: 100%;
     max-height: 208px;
     height: 100vh;
-    color: #FFFFFF;
+    /* color: yellow; */
     justify-content: space-between;
     align-items: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 header {
@@ -38,7 +38,7 @@ header p {
     line-height: 24px; */
     font-weight: 800;
     font-style: normal;
-    color: #FFFFFF;
+    color: #fdfcdc;
     margin-left: 1em;
 }
 
@@ -49,14 +49,14 @@ header a {
     font-size: 1rem;
     line-height: 1rem;
     text-align: right;
-    color: #FFFFFF;
+    color: #fdfcdc;
     margin-left: 5em;
     cursor: pointer;
     text-decoration: none;
 }
 
 .genre span {
-    font-size: 0.75em;
+    font-size: 0.875rem;
 }
 
 
@@ -128,7 +128,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin-top: 1em;
     /* border: 1px solid white; */
     /* justify-self:  */
 }
@@ -164,7 +164,7 @@ form {
     display: flex;
     flex-direction: column;
     /* background-color: white; */
-    border-bottom: 1.5px solid #2C2C2C;
+    border-bottom: 3px solid #2C2C2C;
     max-width: 462px;
     width: 87%;
     /* border:1px solid white; */
@@ -175,7 +175,8 @@ form {
 .poster {
     width: 100%;
     height: 100%;
-    /* border: 1px solid red; */
+    border: 1.5px solid #2C2C2C;
+    border-radius: 5px;
     background-size: cover;
 }
 
@@ -199,10 +200,11 @@ form {
 
 .genre {
     display: flex;
-    width: 300px;
+    width: 100%;
     color: #FFFFFF;
     justify-content: space-between;
     align-items: center;
+    margin: 0.5em 0;
 }
 
 .plot {
