--- a/index.css
+++ b/index.css
@@ -157,7 +157,7 @@ form {
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.2;
-    text-align: center;
+    text-align: left;
     color: #787878;
 }
 
@@ -216,7 +216,7 @@ form {
     line-height: 1.5;
     /* color: #A5A5A5; */
     color: #A5A5A5;
-
+    text-align: left;
     margin: 0;
 }
 
@@ -253,4 +253,37 @@ form {
     width: 10px;
     height: 10px;
     background-color: white;
+}
+
+@media(min-width:400px) {
+    
+    .movie-card {
+        flex-direction: row;
+    }
+button {
+    margin-left:auto;
+}
+input {
+    max-width: 100%;
+    padding: 0 0.5rem;
+    margin-right: 0.25em;
+}
+
+.search-container {
+    padding: 0;
+}
+
+.movie-list p{
+    text-align: left;
+    margin-left: 1em;
+}
+
+.genre {
+    margin-left: 1em;
+}
+
+.description {
+    display: flex;
+}
+
 }
