--- a/index.css
+++ b/index.css
@@ -13,7 +13,6 @@ body {
 .header-div {
     position: fixed;
     display: flex;
-    /* flex-direction: column; */
     background-image: url("images/poster-image.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -21,7 +20,6 @@ body {
     width: 100%;
     max-height: 208px;
     height: 100vh;
-    /* border: 1px solid white; */
 }
 
 .header-content-div {
@@ -47,7 +45,6 @@ body {
 }
 
 .header-content-div a {
-    /* position: absolute; */
     font-style: normal;
     font-weight: 400;
     font-size: 0.875rem;
@@ -92,8 +89,6 @@ button {
     width: 87%;
     height: 38px;
     border-radius: 0.375em;
-    /* background-color: #2E2E2F; */
-    /* border: 1px solid red; */
     padding: 0.125em;
     top:190px;
     margin: 0 auto; 
@@ -118,9 +113,8 @@ i {
     display: flex;
     flex-direction: column;
     max-width: 550px;
-    /* max-width: 1200px; */
     width: 100vw;
-    /* height: 92vh; */
+    height: 92vh;
     margin: 0 auto;
     justify-content: space-between;
 }
@@ -128,8 +122,6 @@ i {
 .filler-img {
     width: 70px;
     height: 62px;
-    /* margin-top: 211px; */
-
 }
 
 form {
@@ -150,12 +142,9 @@ form {
 .movie-card {
     display: flex;
     flex-direction: column;
-    /* background-color: white; */
     border-bottom: 3px solid #2C2C2C;
     max-width: 462px;
     width: 87%;
-    /* border:1px solid white; */
-    /* margin: 2.625em 0; */
     padding: 1em 0;
 }
 
@@ -175,16 +164,12 @@ form {
 }
 
 .description {
-    /* display: flex; */
     flex-direction: column;
     justify-content: center;
-    /* margin-left: 20px; */
 }
 
 .title {
     display: flex;
-    
-    /* border: 1px solid red; */
 }
 
 .genre {
@@ -256,13 +241,8 @@ form {
     left: 80vw;
     z-index: 99;
     font-size: 2rem;
-    /* border: none;
-    outline: none; */
-    /* background-color: red; */
     color: #A5A5A5;
     cursor: pointer;
-    /* padding: 15px; */
-    /* border-radius: 4px; */
   }
 
   #scroll-btn:hover {
@@ -293,8 +273,12 @@ input {
     padding: 0;
 }
 
-.movie-list p{
+.plot{
     text-align: left;
+    margin-left: 1em;
+}
+
+.title {
     margin-left: 1em;
 }
 
@@ -308,7 +292,7 @@ input {
 }
 
 .poster-div {
-    height: 80%;
+    height: 100%;
 }
 
 header a {
